--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -23,6 +23,7 @@
 			<div class="mui-scroll">
 				<!--这里放置真实显示的DOM内容-->
 				<!--作业详情区-->
+				<h6 class="comment-item">完成的作业</h6>
 				<div class="homework-container">
 					<div class='student-info'>
 						<img id="stu-head" class='stuInfo-img' />
@@ -31,7 +32,6 @@
 							<p id='submit-time' class="submit-time"></p>
 						</div>
 					</div>
-					<div class="the-line"></div>
 					<div id="homework-info" class="homework-info"></div>
 				</div>
 				<!--<div class="result-container">
@@ -42,8 +42,15 @@
 				<!--评论区-->
 				<div class="comment-container">
 					<h6 class="comment-item">作业评语</h6>
-					<textarea id="comment-area" class='comment-area' rows="5" placeholder="请输入评语，最多1000字"></textarea>
-					<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
+					<div class="comment-holder display-none">
+						<textarea id="comment-area" class='comment-area' rows="5" placeholder="请输入评语，最多1000字"></textarea>
+						<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
+					</div>
+					<div class="commented-holder display-none">
+						<p class="commented-words homework-info work-result"></p>
+						<div class="change-holder mui-pull-right"><span class="change-comment iconfont icon-write"></span></div> 
+					</div>
+					
 				</div>
 
 			</div>
