替换修改群信息，创建资料的图标

--- a/JiaoBaoYun-hb/html/mine/qun_manage_1.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_1.html
@@ -75,8 +75,8 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title"></h1>
-			<a id="changeInfo" class="mui-icon iconfont icon-qunziliao mui-pull-right" style="display: none;"></a>
-			<a id="addData" class="mui-icon iconfont icon-ruqun mui-pull-right" style="display: none;margin-right: 5px;"></a>
+			<a id="changeInfo" class="mui-icon iconfont icon-changeinfo0 mui-pull-right" style="display: none;"></a>
+			<a id="addData" class="mui-icon iconfont icon-adddata0 mui-pull-right" style="display: none;margin-right: 5px;"></a>
 		</header>
 		<div id="content" class="mui-content">
 			<span id="noqun" class="mui-icon mui-icon-plus qun-add" style="display: none;position: absolute;top: 80px;">新增群按钮</span>
