优化创建资料界面，优化群管理和人员资料界面，修改群信息输入框

--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -74,6 +74,10 @@
 				padding-right: 30px;
 			}
 
+			.mui-checkbox input[type=checkbox]:before {
+				font-size: 25px;
+			}
+
 			.mui-icon-arrowdown {
 				color: #B7B7B7;
 			}
