--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
@@ -10,6 +10,27 @@
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<style>
+			body,
+			.mui-content {
+				background-color: white;
+			}
+
+			#input {
+				border: none;
+				border-bottom: 1px solid #00A5E0;
+				border-radius: initial;
+				margin-left: 1%;
+				width: 98%;
+				padding-left: 10px;
+				padding-right: 20px;
+			}
+
+			#input_num {
+				position: absolute;
+				right: 10px;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -20,11 +41,13 @@
 		</header>
 		<div class="mui-content">
 			<div class="mui-input-row">
+				<p id="input_num">&nbsp;</p>
 				<input id="input" type="text">
 			</div>
 		</div>
 		<script type="text/javascript">
 			mui.init();
+			document.getElementById("input_num").style.top = document.getElementById("input").offsetHeight - document.getElementById("input_num").offsetHeight + 'px';
 			mui.plusReady(function() {
 				events.blurBack();
 				//---从父页面获取数据---start---
@@ -54,7 +77,14 @@
 				document.getElementById('input').maxLength = maxLength;
 				document.getElementById("input").placeholder = document.getElementById("title").innerText + ',最多' + maxLength + '字';
 				document.getElementById("input").value = subData.value;
+				document.getElementById("input_num").innerText = maxLength - subData.value.length;
 
+				document.getElementById('input').addEventListener('input', function() {
+					var value = this.value.replace(/\r|\n/g, '');
+					this.value = value;
+					document.getElementById("input_num").innerText = maxLength - value.length;
+
+				});
 				document.getElementById('save').addEventListener('tap', function() {
 					var vvl = document.getElementById("input").value;
 					if(subData.type == 'gname' && vvl.replace(/(^\s*)|(\s*$)/g, "") == "") {
