--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -53,8 +53,10 @@
 					<div class="publish-extras">
 						<!--<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>-->
 						<a id="getImg" class="mui-icon iconfont icon-xiangji1"></a>
-						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
 						<a id="get_gallery" class="mui-icon iconfont icon-tuku"></a>
+						<a id="get_record" class="mui-icon iconfont icon-yuyin3"></a>
+						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
+						
 					</div>
 				</div>
 				<div class="online-container">
