--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -21,19 +21,24 @@
 		</header>
 		<div class="mui-content">
 			<div class="input-content">
-				<textarea id="input-content" placeholder="请输入内容" value=""></textarea>
+				<textarea id="input-content" placeholder="请输入内容,最多1000字" value=""></textarea>
 				<!--放置图片-->
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji"></a>
-				</div>
-				<!--录像功能-->
-				<div id="take_camero" class="take_camero">
-					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
 				<!--图库选择-->
 				<div id="get_gallery" class="get_gallery">
 					<a class="mui-icon iconfont icon-tuku"></a>
 				</div>
+				<!--语音-->
+				<div id="get_record" class="get_record">
+					<a class="mui-icon iconfont icon-yuyin3"></a>
+				</div>
+				<!--录像功能-->
+				<div id="take_camero" class="take_camero">
+					<a class="mui-icon iconfont icon-shipin"></a>
+				</div>
+				
 			</div>
 			<div id="pictures" class="img-container temWork-teaHint"></div>
 		</div>
@@ -68,6 +73,7 @@
 			mui.plusReady(function() {
 				//加载预览方法
 				mui.previewImage();
+				jQuery("#input-content").prop("maxLength",2000);
 				//加载监听
 				window.addEventListener('homeworkInfo', function(e) {
 					CloudFileUtil.files = [];
@@ -155,6 +161,10 @@
 				events.addTap('take_camero', function() {
 					mui.toast('功能暂未开放！');
 				});
+				//录音按钮
+				events.addTap("get_record",function(){
+					mui.toast('功能暂未开放！');
+				})
 				//相册按钮
 				events.addTap('get_gallery', function() {
 					if(CloudFileUtil.files.length < 9) {
@@ -215,6 +225,9 @@
 					mui.toast('请输入作业内容');
 					return;
 				} else {
+					if(events.limitInput(tempText,1000)){
+						return;
+					}
 //					tempText = replaceAllBL(tempText);
 				}
 				for(var i in CloudFileUtil.files) {
