--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -105,12 +105,19 @@
 
 				var curPage = plus.webview.currentWebview();
 				phoneNum = curPage.data;
-				if(phoneNum == 0) { //设置里面退出时设置密码
+				if(phoneNum == 0 || phoneNum == 3) { //注册0，验证码登录3
 					back.style.display = 'none';
-					tempFlag = 2;
+					if(phoneNum == 0) { //注册0
+						tempFlag = 2;
+						unickName0.style.display = 'block';
+						unickName.style.display = 'block';
+					} else { //验证码登录3
+						tempFlag = 4;
+						unickName0.style.display = 'none';
+						unickName.style.display = 'none';
+					}
 					navTitle.innerHTML = '设置密码';
-					unickName0.style.display = 'block';
-					unickName.style.display = 'block';
+
 					oldPassword.style.display = 'none';
 					document.getElementById('cancelBtn').style.display = 'inline-block';
 					modifypasswordBtn.innerHTML = '完成';
@@ -171,7 +178,7 @@
 								return;
 							}
 						}
-					} else if(tempFlag == 2) { //从验证码界面登录或者注册时
+					} else if(tempFlag == 2) { //从验证码界面注册时
 						if(unickName.value.length == 0) {
 							mui.toast('请输入昵称');
 							return;
@@ -188,7 +195,9 @@
 								return;
 							}
 						}
-					}
+					}else if(tempFlag == 4) { //验证码登录3
+						
+					} 
 					if(!newpw0) {
 						mui.toast('请输入新密码');
 						return;
@@ -248,7 +257,7 @@
 								//								vvl://
 							};
 							//发送网络请求，data为网络返回值
-							if(tempFlag == 0 || tempFlag == 2 || tempFlag == 3) {
+							if(tempFlag == 0 || tempFlag == 2 || tempFlag == 3|| tempFlag == 4) {
 								comData.vtp = 'np'; //np(新建密码),rp(修改密码)
 								enData.vvl = '';
 								//6.用户修改各项用户信息
